Send raw keyboard event for windowless plugins, bug 122501 r=kmcclusk@netscape.com sr=beard